KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Supplier__c/Supplier__c.object-meta.xml
<CustomObject>
    <label>Supplier</label>
    <nameField>
        <displayFormat>SUP-{000}</displayFormat>
        <label>Supplier id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>