KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Supplier__c/fields/Supplier_Address__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Address__c</fullName>
    <label>Supplier Address</label>
    <type>TextArea</type>
</CustomField>