KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Supplier__c/fields/Supplier_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Email_ID__c</fullName>
    <label>Supplier Email ID</label>
    <type>Email</type>
</CustomField>