KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Supplier__c/fields/Supplier_mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_mobile_Number__c</fullName>
    <label>Supplier mobile Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>