KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Supplier__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <label>Supplier Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>