KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Supplier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Supplier_Name__c</columns>
    <columns>Supplier_Email_ID__c</columns>
    <columns>Supplier_mobile_Number__c</columns>
    <columns>Supplier_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>